<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/bg">

    <TextView
        android:layout_marginTop="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/change_password"
        android:id="@+id/tvForget_Pass" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:id="@+id/etNewPass"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/send_new_password"
        android:layout_marginTop="10dp"
        android:id="@+id/btnSend" />
</LinearLayout>
